2008-11-14  Mike Krüger  <mkrueger@novell.com>

	* Gui/ResolveVisitor.cs: fixed 'Bug 444110 - Code completion doesn't
	activate'.

2008-11-14  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpAmbience.cs: Fixed full namespace display of members.

	* Gui/CSharpTextEditorCompletion.cs: Worked on new completion.

2008-11-12  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Fix completion location off-by-one.
	Fixes extra char that was added at end of namespaces.

2008-11-12  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Gui/CSharpTextEditorCompletion.cs: Move template completion code to
	MonoDevelop.Ide.

	* Makefile.am:
	* CSharpBinding.mdp: Updated.

	* Gui/CodeTemplateCompletionData.cs: Unused, remove.

2008-11-12  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Gui/CodeTemplateCompletionData.cs: Added double tab templates.

2008-11-12  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* Autotools/Makefile.am: Fix issue with parallel building.

	* Gui/MemberCompletionData.cs: Don't use the description to
	differentiate overloads, since it has to query info from monodoc and
	that's very slow. Use the help url instead, which seems to work fine
	as id.

2008-11-12  Mike Krüger  <mike@icsharpcode.net>

	* Gui/MemberCompletionData.cs:
	* Gui/CodeTemplateCompletionData.cs:
	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 443493 - C# completion
	should not trigger at start of existing words'.

2008-11-11  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Track fix in text editor's
	completion line/col indexing. It's now 1-indexed, as it should be.
	Allow triggering after ( and {. Don't aggressively trigger before a
	non-whitespace/punctuation char. Replace "location" field with
	parameter usage, so it's easier to follow the usage. Refactor out
	some expression finder creation so it's all done in one place.
